--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,8 +4,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=1060,0
-Size=220,720
+Pos=1108,0
+Size=172,495
 Collapsed=0
 DockId=0x00000007,0
 
@@ -71,24 +71,35 @@ Size=262,310
 Collapsed=0
 
 [Window][Camera]
-Pos=192,272
-Size=469,180
+Pos=0,362
+Size=286,358
 Collapsed=0
+DockId=0x00000005,0
 
 [Window][Meshes]
 Pos=1021,66
 Size=310,714
 Collapsed=0
 
+[Window][Application Statistics]
+Pos=0,0
+Size=286,360
+Collapsed=0
+DockId=0x00000002,0
+
 [Docking][Data]
-DockSpace     ID=0x3BC79352 Pos=0,19 Size=1280,701 Split=X
-  DockNode    ID=0x00000009 Parent=0x3BC79352 SizeRef=449,701 Selected=0xCB707B69
-  DockNode    ID=0x0000000A Parent=0x3BC79352 SizeRef=829,701 Split=X
-    DockNode  ID=0x00000006 Parent=0x0000000A SizeRef=739,701 CentralNode=1
-    DockNode  ID=0x00000001 Parent=0x0000000A SizeRef=539,701
-DockSpace     ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=1280,720 Split=X
-  DockNode    ID=0x00000005 Parent=0x8B93E3BD SizeRef=1058,720 Split=Y
-    DockNode  ID=0x00000003 Parent=0x00000005 SizeRef=1280,326 Selected=0x0B5ED8BF
-    DockNode  ID=0x00000004 Parent=0x00000005 SizeRef=1280,32 CentralNode=1 Selected=0xE927CF2F
-  DockNode    ID=0x00000007 Parent=0x8B93E3BD SizeRef=220,720 Selected=0xE927CF2F
+DockSpace       ID=0x3BC79352 Pos=0,19 Size=1280,701 Split=X
+  DockNode      ID=0x00000009 Parent=0x3BC79352 SizeRef=449,701 Selected=0xCB707B69
+  DockNode      ID=0x0000000A Parent=0x3BC79352 SizeRef=829,701 Split=X
+    DockNode    ID=0x00000006 Parent=0x0000000A SizeRef=739,701 CentralNode=1
+    DockNode    ID=0x00000001 Parent=0x0000000A SizeRef=539,701
+DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=1280,720 Split=X
+  DockNode      ID=0x0000000C Parent=0x8B93E3BD SizeRef=286,720 Split=Y Selected=0x3F488DE8
+    DockNode    ID=0x00000002 Parent=0x0000000C SizeRef=637,360 Selected=0x3F488DE8
+    DockNode    ID=0x00000005 Parent=0x0000000C SizeRef=637,358 Selected=0x3CB0EB33
+  DockNode      ID=0x0000000D Parent=0x8B93E3BD SizeRef=992,720 Split=X
+    DockNode    ID=0x00000008 Parent=0x0000000D SizeRef=1058,720 Split=Y
+      DockNode  ID=0x00000003 Parent=0x00000008 SizeRef=1280,326 Selected=0x0B5ED8BF
+      DockNode  ID=0x00000004 Parent=0x00000008 SizeRef=1280,32 CentralNode=1 Selected=0x3F488DE8
+    DockNode    ID=0x00000007 Parent=0x0000000D SizeRef=220,720 Selected=0xE927CF2F
 
