>Assets are now referenced by name rather than by their file path >Added debug memory details for assets for memory monitoring

--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,10 +4,9 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=1108,0
-Size=172,495
+Pos=821,72
+Size=353,501
 Collapsed=0
-DockId=0x00000007,0
 
 [Window][Example: Console]
 Pos=1151,333
@@ -72,7 +71,7 @@ Collapsed=0
 
 [Window][Camera]
 Pos=0,362
-Size=286,358
+Size=291,358
 Collapsed=0
 DockId=0x00000005,0
 
@@ -83,23 +82,27 @@ Collapsed=0
 
 [Window][Application Statistics]
 Pos=0,0
-Size=286,360
+Size=291,360
+Collapsed=0
+DockId=0x00000002,1
+
+[Window][Asset System]
+Pos=0,0
+Size=291,360
 Collapsed=0
 DockId=0x00000002,0
 
 [Docking][Data]
-DockSpace       ID=0x3BC79352 Pos=0,19 Size=1280,701 Split=X
-  DockNode      ID=0x00000009 Parent=0x3BC79352 SizeRef=449,701 Selected=0xCB707B69
-  DockNode      ID=0x0000000A Parent=0x3BC79352 SizeRef=829,701 Split=X
-    DockNode    ID=0x00000006 Parent=0x0000000A SizeRef=739,701 CentralNode=1
-    DockNode    ID=0x00000001 Parent=0x0000000A SizeRef=539,701
-DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=1280,720 Split=X
-  DockNode      ID=0x0000000C Parent=0x8B93E3BD SizeRef=286,720 Split=Y Selected=0x3F488DE8
-    DockNode    ID=0x00000002 Parent=0x0000000C SizeRef=637,360 Selected=0x3F488DE8
-    DockNode    ID=0x00000005 Parent=0x0000000C SizeRef=637,358 Selected=0x3CB0EB33
-  DockNode      ID=0x0000000D Parent=0x8B93E3BD SizeRef=992,720 Split=X
-    DockNode    ID=0x00000008 Parent=0x0000000D SizeRef=1058,720 Split=Y
-      DockNode  ID=0x00000003 Parent=0x00000008 SizeRef=1280,326 Selected=0x0B5ED8BF
-      DockNode  ID=0x00000004 Parent=0x00000008 SizeRef=1280,32 CentralNode=1 Selected=0x3F488DE8
-    DockNode    ID=0x00000007 Parent=0x0000000D SizeRef=220,720 Selected=0xE927CF2F
+DockSpace     ID=0x3BC79352 Pos=0,19 Size=1280,701 Split=X
+  DockNode    ID=0x00000009 Parent=0x3BC79352 SizeRef=449,701 Selected=0xCB707B69
+  DockNode    ID=0x0000000A Parent=0x3BC79352 SizeRef=829,701 Split=X
+    DockNode  ID=0x00000006 Parent=0x0000000A SizeRef=739,701 CentralNode=1
+    DockNode  ID=0x00000001 Parent=0x0000000A SizeRef=539,701
+DockSpace     ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=1280,720 Split=X
+  DockNode    ID=0x0000000C Parent=0x8B93E3BD SizeRef=291,720 Split=Y Selected=0x3F488DE8
+    DockNode  ID=0x00000002 Parent=0x0000000C SizeRef=637,360 Selected=0x24DDE09A
+    DockNode  ID=0x00000005 Parent=0x0000000C SizeRef=637,358 Selected=0x3CB0EB33
+  DockNode    ID=0x0000000D Parent=0x8B93E3BD SizeRef=987,720 Split=Y
+    DockNode  ID=0x00000003 Parent=0x0000000D SizeRef=1280,326 Selected=0x0B5ED8BF
+    DockNode  ID=0x00000004 Parent=0x0000000D SizeRef=1280,32 CentralNode=1 Selected=0x3F488DE8
 
