--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -92,6 +92,11 @@ Size=291,360
 Collapsed=0
 DockId=0x00000002,0
 
+[Window][Light]
+Pos=647,135
+Size=555,312
+Collapsed=0
+
 [Docking][Data]
 DockSpace     ID=0x3BC79352 Pos=0,19 Size=1280,701 Split=X
   DockNode    ID=0x00000009 Parent=0x3BC79352 SizeRef=449,701 Selected=0xCB707B69
@@ -100,7 +105,7 @@ DockSpace     ID=0x3BC79352 Pos=0,19 Size=1280,701 Split=X
     DockNode  ID=0x00000001 Parent=0x0000000A SizeRef=539,701
 DockSpace     ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=1280,720 Split=X
   DockNode    ID=0x0000000C Parent=0x8B93E3BD SizeRef=291,720 Split=Y Selected=0x3F488DE8
-    DockNode  ID=0x00000002 Parent=0x0000000C SizeRef=637,360 Selected=0x24DDE09A
+    DockNode  ID=0x00000002 Parent=0x0000000C SizeRef=637,360 Selected=0x3F488DE8
     DockNode  ID=0x00000005 Parent=0x0000000C SizeRef=637,358 Selected=0x3CB0EB33
   DockNode    ID=0x0000000D Parent=0x8B93E3BD SizeRef=987,720 Split=Y
     DockNode  ID=0x00000003 Parent=0x0000000D SizeRef=1280,326 Selected=0x0B5ED8BF
