--- a/Sandbox/Sandbox.vcxproj
+++ b/Sandbox/Sandbox.vcxproj
@@ -91,12 +91,14 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Source\Content\MultiuseCube.cpp" />
     <ClCompile Include="Source\Content\OpenCVTest.cpp" />
     <ClCompile Include="Source\Example Layer.cpp" />
     <ClCompile Include="Source\ExampleWorldObject.cpp" />
     <ClCompile Include="Source\SandboxApplication.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Source\Content\MultiuseCube.h" />
     <ClInclude Include="Source\Content\OpenCVTest.h" />
     <ClInclude Include="Source\Example Layer.h" />
     <ClInclude Include="Source\ExampleWorldObject.h" />
