--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -46,7 +46,7 @@ DockId=0x00000009,0
 
 [Window][DockSpaceViewport_11111111]
 Pos=0,0
-Size=1920,1017
+Size=1280,740
 Collapsed=0
 
 [Window][Window Size]
@@ -70,8 +70,8 @@ Size=262,310
 Collapsed=0
 
 [Window][Camera]
-Pos=0,511
-Size=251,506
+Pos=0,372
+Size=210,368
 Collapsed=0
 DockId=0x00000005,0
 
@@ -82,13 +82,13 @@ Collapsed=0
 
 [Window][Application Statistics]
 Pos=0,0
-Size=251,509
+Size=210,370
 Collapsed=0
 DockId=0x00000007,1
 
 [Window][Asset System]
 Pos=0,0
-Size=251,509
+Size=210,370
 Collapsed=0
 DockId=0x00000007,0
 
@@ -99,14 +99,14 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Inspector]
-Pos=1617,387
-Size=303,630
+Pos=1078,282
+Size=202,458
 Collapsed=0
 DockId=0x00000010,0
 
 [Window][Heirarchy]
-Pos=1617,0
-Size=303,385
+Pos=1078,0
+Size=202,280
 Collapsed=0
 DockId=0x0000000F,0
 
@@ -116,14 +116,14 @@ DockSpace         ID=0x3BC79352 Pos=0,19 Size=1280,701 Split=X
   DockNode        ID=0x0000000A Parent=0x3BC79352 SizeRef=829,701 Split=X
     DockNode      ID=0x00000006 Parent=0x0000000A SizeRef=739,701 CentralNode=1
     DockNode      ID=0x00000001 Parent=0x0000000A SizeRef=539,701
-DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=1920,1017 Split=X
+DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=1280,740 Split=X
   DockNode        ID=0x0000000B Parent=0x8B93E3BD SizeRef=1615,720 Split=X
-    DockNode      ID=0x0000000C Parent=0x0000000B SizeRef=251,720 Split=Y Selected=0x3F488DE8
+    DockNode      ID=0x0000000C Parent=0x0000000B SizeRef=210,720 Split=Y Selected=0x3F488DE8
       DockNode    ID=0x00000002 Parent=0x0000000C SizeRef=637,360 Split=Y Selected=0x3F488DE8
-        DockNode  ID=0x00000007 Parent=0x00000002 SizeRef=291,180 Selected=0x3F488DE8
+        DockNode  ID=0x00000007 Parent=0x00000002 SizeRef=291,180 Selected=0x24DDE09A
         DockNode  ID=0x00000008 Parent=0x00000002 SizeRef=291,178 Selected=0xAADB73F3
       DockNode    ID=0x00000005 Parent=0x0000000C SizeRef=637,358 Selected=0x3CB0EB33
-    DockNode      ID=0x0000000D Parent=0x0000000B SizeRef=1362,720 Split=Y
+    DockNode      ID=0x0000000D Parent=0x0000000B SizeRef=864,720 Split=Y
       DockNode    ID=0x00000003 Parent=0x0000000D SizeRef=1280,326 Selected=0x0B5ED8BF
       DockNode    ID=0x00000004 Parent=0x0000000D SizeRef=1280,32 CentralNode=1 Selected=0x3F488DE8
   DockNode        ID=0x0000000E Parent=0x8B93E3BD SizeRef=303,720 Split=Y Selected=0xE884D536
