--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -70,8 +70,8 @@ Size=262,310
 Collapsed=0
 
 [Window][Camera]
-Pos=0,372
-Size=210,368
+Pos=0,430
+Size=210,310
 Collapsed=0
 DockId=0x00000005,0
 
@@ -82,19 +82,19 @@ Collapsed=0
 
 [Window][Application Statistics]
 Pos=0,0
-Size=210,370
+Size=210,185
 Collapsed=0
 DockId=0x00000007,1
 
 [Window][Asset System]
 Pos=0,0
-Size=210,370
+Size=210,185
 Collapsed=0
 DockId=0x00000007,0
 
 [Window][Light]
-Pos=0,182
-Size=291,178
+Pos=0,187
+Size=210,241
 Collapsed=0
 DockId=0x00000008,0
 
@@ -119,10 +119,10 @@ DockSpace         ID=0x3BC79352 Pos=0,19 Size=1280,701 Split=X
 DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=1280,740 Split=X
   DockNode        ID=0x0000000B Parent=0x8B93E3BD SizeRef=1615,720 Split=X
     DockNode      ID=0x0000000C Parent=0x0000000B SizeRef=210,720 Split=Y Selected=0x3F488DE8
-      DockNode    ID=0x00000002 Parent=0x0000000C SizeRef=637,360 Split=Y Selected=0x3F488DE8
-        DockNode  ID=0x00000007 Parent=0x00000002 SizeRef=291,180 Selected=0x24DDE09A
-        DockNode  ID=0x00000008 Parent=0x00000002 SizeRef=291,178 Selected=0xAADB73F3
-      DockNode    ID=0x00000005 Parent=0x0000000C SizeRef=637,358 Selected=0x3CB0EB33
+      DockNode    ID=0x00000002 Parent=0x0000000C SizeRef=637,428 Split=Y Selected=0x3F488DE8
+        DockNode  ID=0x00000007 Parent=0x00000002 SizeRef=291,185 Selected=0x3F488DE8
+        DockNode  ID=0x00000008 Parent=0x00000002 SizeRef=291,241 Selected=0xAADB73F3
+      DockNode    ID=0x00000005 Parent=0x0000000C SizeRef=637,310 Selected=0x3CB0EB33
     DockNode      ID=0x0000000D Parent=0x0000000B SizeRef=864,720 Split=Y
       DockNode    ID=0x00000003 Parent=0x0000000D SizeRef=1280,326 Selected=0x0B5ED8BF
       DockNode    ID=0x00000004 Parent=0x0000000D SizeRef=1280,32 CentralNode=1 Selected=0x3F488DE8
